--- a/.travis.yml
+++ b/.travis.yml
@@ -2,27 +2,43 @@
 language: julia
 os:
   - linux
-  - osx
+    # - osx
 julia:
-  - 0.6
-  - nightly
+  - 1.0
+    # - nightly
 notifications:
   email: false
 git:
   depth: 99999999
+env:
+  global:
+    - PYTHON=conda # necessary for SymPy
 
-## uncomment the following lines to allow failures on nightly julia
-## (tests will run but not make your overall status red)
-#matrix:
-#  allow_failures:
-#  - julia: nightly
+matrix:
+  - name: 'using registry'
+    env: USE_POWER_DYN_MASTER=false
+  - name: 'using PowerDynamics subpackage master branch'
+    env: USE_POWER_DYN_MASTER=true
+
+# uncomment the following lines to allow failures on nightly julia
+# (tests will run but not make your overall status red)
+matrix:
+  allow_failures:
+  - julia: nightly
 
 ## uncomment and modify the following lines to manually install system packages
 #addons:
 #  apt: # apt-get for linux
 #    packages:
 #    - gfortran
-#before_script: # homebrew for mac
+before_install:
+  - cat /etc/os-release
+  - julia -e "using InteractiveUtils; versioninfo();"
+  - julia -e 'using Pkg; Pkg.add(PackageSpec(url="https://github.com/JuliaEnergy/PowerDynBase.jl.git"))'
+
+before_script:
+  - cat /etc/os-release
+  - julia -e "using InteractiveUtils; versioninfo();"
 #  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
 
 ## uncomment the following lines to override the default test script
@@ -30,6 +46,6 @@ git:
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("DPSASolve"); Pkg.test("DPSASolve"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("DPSASolve")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  # - julia -e 'cd(Pkg.dir("DPSASolve")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("DPSASolve")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
