--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@
 language: julia
 os:
   - linux
-    # - osx
+   - osx
 julia:
   - 1.0
-    # - nightly
+  # - nightly
 notifications:
   email: false
 git:
@@ -15,10 +15,11 @@ env:
     - PYTHON=conda # necessary for SymPy
 
 matrix:
-  - name: 'using registry'
-    env: USE_POWER_DYN_MASTER=false
-  - name: 'using PowerDynamics subpackage master branch'
-    env: USE_POWER_DYN_MASTER=true
+  include:
+    - name: 'using registry'
+      env: USE_POWER_DYN_MASTER=false
+    - name: 'using PowerDynamics subpackage master branch'
+      env: USE_POWER_DYN_MASTER=true
 
 # uncomment the following lines to allow failures on nightly julia
 # (tests will run but not make your overall status red)
@@ -34,7 +35,7 @@ matrix:
 before_install:
   - cat /etc/os-release
   - julia -e "using InteractiveUtils; versioninfo();"
-  - julia -e 'using Pkg; Pkg.add(PackageSpec(url="https://github.com/JuliaEnergy/PowerDynBase.jl.git"))'
+  - if [ $USE_POWER_DYN_MASTER ]; then julia -e 'using Pkg; Pkg.add(PackageSpec(url="https://github.com/JuliaEnergy/PowerDynBase.jl.git"))'; fi
 
 before_script:
   - cat /etc/os-release
