--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ env:
 
 # uncomment the following lines to allow failures on nightly julia
 # (tests will run but not make your overall status red)
-matrix:
-  allow_failures:
-  - julia: nightly
+#matrix:
+#  allow_failures:
+#    - julia: nightly
 
 ## uncomment and modify the following lines to manually install system packages
 #addons:
@@ -31,7 +31,7 @@ matrix:
 before_install:
   - cat /etc/os-release
   - julia -e "using InteractiveUtils; versioninfo();"
-  - if [ $USE_POWER_DYN_MASTER ]; then julia -e 'using Pkg; Pkg.add(PackageSpec(url="https://github.com/JuliaEnergy/PowerDynBase.jl.git"))'; fi
+  - if [ $USE_POWER_DYN_MASTER = true ]; then julia -e 'using Pkg; Pkg.add(PackageSpec(url="https://github.com/JuliaEnergy/PowerDynBase.jl.git"))'; fi
 
 before_script:
   - cat /etc/os-release
