--- a/.travis.yml
+++ b/.travis.yml
@@ -29,13 +29,11 @@ env:
 #    packages:
 #    - gfortran
 before_install:
-  - cat /etc/os-release
   - julia -e "using InteractiveUtils; versioninfo();"
   - if [ $USE_POWER_DYN_MASTER = true ]; then julia -e 'using Pkg; Pkg.add(PackageSpec(url="https://github.com/JuliaEnergy/PowerDynBase.jl.git"))'; fi
 
-before_script:
-  - cat /etc/os-release
-  - julia -e "using InteractiveUtils; versioninfo();"
+#before_script:
+#  - julia -e "using InteractiveUtils; versioninfo();"
 #  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
 
 ## uncomment the following lines to override the default test script
