--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,10 @@ env:
   global:
     - PYTHON=conda # necessary for SymPy
   matrix:
-    - USE_POWER_DYN_MASTER=true
-    - USE_POWER_DYN_MASTER=false
-matrix:
+    include:
+      - USE_POWER_DYN_MASTER=true
   allow_failures:
-    - USE_POWER_DYN_MASTER=false
+      - USE_POWER_DYN_MASTER=false
 
 # uncomment the following lines to allow failures on nightly julia
 # (tests will run but not make your overall status red)
