--- a/Project.toml
+++ b/Project.toml
@@ -9,12 +9,13 @@ DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
-PowerDynBase = "7a7a2b06-a220-11e8-075f-5fa810722f34"
+PowerDynBase = "7ffb48b1-f436-5a59-a310-b4407da33972"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 
 [compat]
 DifferentialEquations = "^5"
 Julia = "^1.0"
+PowerDynBase = "^0"
 
 [extras]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
