--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: julia
 os:
   - linux
-  - osx
+  # - osx
 julia:
   - 1.0
   # - nightly
@@ -33,15 +33,14 @@ before_install:
   - julia -e "using InteractiveUtils; versioninfo();"
   - if [ $USE_POWER_DYN_MASTER = true ]; then julia -e 'using Pkg; Pkg.add(PackageSpec(url="https://github.com/JuliaEnergy/PowerDynBase.jl.git"))'; fi
 
-#before_script:
-#  - julia -e "using InteractiveUtils; versioninfo();"
+before_script:
 #  - if [ $TRAVIS_OS_NAME = osx ]; then brew install gcc; fi
+  - julia -e 'using Pkg; Pkg.add(PackageSpec(name="Documenter", version="0.19"))'
 
-## uncomment the following lines to override the default test script
-#script:
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("DPSASolve"); Pkg.test("DPSASolve"; coverage=true)'
+# uncomment the following lines to override the default test script
+script:
+ - julia --check-bounds=yes --color=yes --inline=no -e "using Pkg; Pkg.test(coverage=true)"
+ - julia docs/make.jl
 after_success:
-  # push coverage results to Coveralls
-  # - julia -e 'cd(Pkg.dir("DPSASolve")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
