final travis setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ jobs:
         - julia docs/make.jl
     - name: "Changelog Check"
       script:
+        # show all changed files for debugging
         - git diff HEAD HEAD~1 --name-only
-        - git diff HEAD HEAD~1 --name-only | grep ^.travis.yml$
         # check if CHANGELOG.md has been modified
         - git diff HEAD HEAD~1 --name-only | grep ^CHANGELOG.md$
