--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ jobs:
       script:
         - git remote -v
         - git fetch origin master
+        - git show-ref
         # show all changed files for debugging
         - git diff HEAD master --name-only
         # check if CHANGELOG.md has been modified
