--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ jobs:
         # - git remote -v
         - git fetch origin master
         # - git show-ref
-        # - git branch -a
+        - git branch -a
         # show all changed files for debugging
         - git diff HEAD master --name-only
         # check if CHANGELOG.md has been modified
