--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ jobs:
       script:
         # - git remote -v
         - git fetch origin master
-        # - git show-ref
+        - git show-ref
         - git branch -a
         # show all changed files for debugging
         - git diff HEAD master --name-only
