--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ jobs:
       script:
         - julia docs/make.jl
     - name: "Changelog Check"
+      if: type IN (pull_request)
       before_install:
       before_script:
       script:
