--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 DifferentialEquations = "^5"
 Julia = "^1.0"
 PowerDynBase = "^0"
+PowerDynOperationPoint = "^0.2"
 
 [extras]
 Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
