--- a/Project.toml
+++ b/Project.toml
@@ -17,10 +17,13 @@ RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 DifferentialEquations = "^5"
 Julia = "^1.0"
 PowerDynBase = "^0"
+PowerDynOperationPoint = "^0.2"
 
 [extras]
+Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
+PowerDynOperationPoint = "95be4243-a2fd-5eef-a7d1-2e97978993e7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Random"]
+test = ["Test", "Random", "PowerDynOperationPoint", "Crayons"]
