--- a/Project.toml
+++ b/Project.toml
@@ -5,10 +5,10 @@ version = "0.6.1"
 
 [deps]
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
-DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Lazy = "50d2b5c4-7a5e-59d5-8109-a42b560f39c0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PowerDynBase = "7ffb48b1-f436-5a59-a310-b4407da33972"
 PowerDynOperationPoint = "95be4243-a2fd-5eef-a7d1-2e97978993e7"
@@ -27,4 +27,4 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Random", "PowerDynOperationPoint", "Crayons"]
+test = ["PowerDynOperationPoint", "Crayons", "Random", "Test"]
