--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PowerDynSolve"
 uuid = "b2d36aa5-a2b1-5d23-8bd9-f353e61de00d"
 authors = ["Tim Kittel <tim.kittel@elena-international.com>"]
-version = "0.6.1"
+version = "1.0.0"
 
 [deps]
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
@@ -16,7 +16,7 @@ RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 
 [compat]
 DiffEqBase = "5.6.2"
-OrdinaryDiffEq = "^5"
+OrdinaryDiffEq = "5"
 Julia = "1"
 PowerDynBase = "1"
 PowerDynOperationPoint = "1"
